--- a/wordpress/wordpress-deployment.yaml
+++ b/wordpress/wordpress-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:latest
+        image: 5.7.2-apache
         env:
         - name: WORDPRESS_DB_HOST
           value: mariadb.mariadb.svc.cluster.local:3306
